removing categories button

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <header>
         <nav class="dropDownMenu">
-            <img src="./images/logo-inline.svg" text="Logo Brasil ao Norte" alt="error">
-            <button id="categories" onclick="SlideDown()" onmouseleave="SlideUp()" ><img src="./images/icons/menu-icon.svg" alt="error"> Categorias</button>
-            <div class="content">
+            <a href=""><img id="Logo" src="./images/logo-inline.svg" text="Logo Brasil ao Norte" alt="error"></a>
+            <button id="categories" onclick="SlideDown()"><img src="./images/icons/menu-icon.svg" alt="error"> Categorias</button>
+            <div class="content" onmouseleave="SlideUp()">
                 <a href="">Página Inicial</a>
                 <a href="#restaurant">Restaurantes</a>
                 <a href="#beauty">Beleza e Estética</a>
@@ -35,8 +35,8 @@
                 <h1>Encontre profissionais e serviços brasileiros no Canadá</h1>
                 <p>Busque por cidade e confira a lista de empresas e prestadores de serviços brasileiros em terras canadenses. Para se sentir confortável com quem fala a sua língua e entende suas necessidades.</p>
                 <div class="buttons">
-                    <button class="mainButton">Busque por categoria</button>
-                    <a href=""><button class="secButton">Cadastre seu negócio</button></a>
+                    <!--<button class="mainButton">Busque por categoria</button>-->
+                    <a href="#register"><button class="secButton">Cadastre seu negócio</button></a>
                 </div>
             </article>
                 <img src="./images/banner-img.svg" text="Banner" alt="error">
